force-app/main/default/objects/Mobile_App__mdt/Mobile_App__mdt.object-meta.xml
<CustomObject>
    <label>Mobile App</label>
    <pluralLabel>Mobile App</pluralLabel>
</CustomObject>