force-app/main/default/objects/Mobile_App__mdt/fields/Applicant_Details_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To stop/start Applicant Details trigger to create user in Mobile APP</description>
    <label>Applicant Details Trigger</label>
    <type>Checkbox</type>
</CustomField>