force-app/main/default/objects/Mobile_App__mdt/fields/Booking_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>Booking_Endpoint_URL__c</fullName>
    <label>Booking Endpoint URL</label>
    <type>Url</type>
</CustomField>