force-app/main/default/objects/Mobile_App__mdt/fields/Booking_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Booking_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Trigger</label>
    <type>Checkbox</type>
</CustomField>