force-app/main/default/objects/Mobile_App__mdt/fields/cluster_Trigger__c.field-meta.xml
<CustomField>
    <fullName>cluster_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cluster Trigger</label>
    <type>Checkbox</type>
</CustomField>