force-app/main/default/objects/Mobile_App__mdt/fields/Communities_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Communities_endpoint__c</fullName>
    <label>Communities endpoint</label>
    <type>Url</type>
</CustomField>