force-app/main/default/objects/Mobile_App__mdt/fields/Enquiry_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enquiry Trigger</label>
    <type>Checkbox</type>
</CustomField>