force-app/main/default/objects/Mobile_App__mdt/fields/Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>