force-app/main/default/objects/Mobile_App__mdt/fields/Master_Communities_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Master_Communities_Endpoint__c</fullName>
    <label>Master Communities Endpoint</label>
    <type>Url</type>
</CustomField>