force-app/main/default/objects/Mobile_App__mdt/fields/Master_Project_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Master_Project_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Master Project Trigger</label>
    <type>Checkbox</type>
</CustomField>