force-app/main/default/objects/Mobile_App__mdt/fields/Notifications_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Endpoint__c</fullName>
    <label>Notifications Endpoint</label>
    <type>Url</type>
</CustomField>