force-app/main/default/objects/Mobile_App__mdt/fields/Profile_Case_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Profile_Case_Endpoint__c</fullName>
    <label>Profile Case Endpoint</label>
    <type>Url</type>
</CustomField>