force-app/main/default/objects/Mobile_App__mdt/fields/Project_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Project_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project Trigger</label>
    <type>Checkbox</type>
</CustomField>