force-app/main/default/objects/Mobile_App__mdt/fields/sf_Token__c.field-meta.xml
<CustomField>
    <fullName>sf_Token__c</fullName>
    <label>sf-Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>