force-app/main/default/objects/Mobile_App__mdt/fields/Tower_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Tower_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tower Trigger</label>
    <type>Checkbox</type>
</CustomField>