force-app/main/default/objects/Mobile_App__mdt/fields/User_trigger__c.field-meta.xml
<CustomField>
    <fullName>User_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applicant Detail trigger</label>
    <type>Checkbox</type>
</CustomField>